# context-failure-evals

./: .env.example  .gitignore  README.md  context_confusion_demo.ipynb  context_distraction_demo.ipynb  pyproject.toml  test_context_distraction.py
context_clash/: create_dataset.py  helpers.py  model.py  sequential_graph.py  subagents_as_tools.py
context_clash/subagents/: __init__.py  common.py  crunchbase.py  glassdoor.py  homepage.py  linkedin.py  models.py  news.py  pitchbook.py  twitter.py  wikipedia.py
context_confusion/: additional_context.py  agent.py  instructions.py  tools.py
context_confusion/resources/: mock_carriers.py  mock_customers.py  mock_orders.py  mock_warehouses.py  test_cases.py
context_confusion/solutions/: __init__.py  consolidated_tools.py
context_confusion/utils/: __init__.py  agent_helpers.py  plotting.py
context_distraction/: __init__.py  agent.py  deep.py  graph.py  instructions.py  middleware.py  multi.py  state.py  tools.py
context_distraction/debug/: CLAUDE.md  dump_full_trace.py  fetch_latest_trace.py  inspect_researcher.py
context_distraction/resources/: __init__.py  expected_calculations.py  mock_research_data.py  synthetic_data.py  test_tasks.py  validation_utils.py
context_distraction/tests/: evaluators.py  setup_datasets.py  (+5 more)
context_poisoning/: __init__.py  agent.py  instructions.py  tools.py
notebooks/: context_clash.ipynb  context_confusion.ipynb  context_confusion_demo.ipynb  context_distraction.ipynb  context_distraction_deepagent_demo.ipynb  context_distraction_demo.ipynb  context_poisoning_demo.ipynb
(+61 files in other folders)
